syntax = "proto3";

package worker.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "validate/validate.proto";

option go_package = "github.com/superblocksteam/agent/types/gen/go/worker/v1";

service SandboxStreamingProxyService {
  rpc Send(SendRequest) returns (google.protobuf.Empty) {}
  rpc Until(UntilRequest) returns (google.protobuf.Empty) {}
}

message SendRequest {
  string topic = 1 [
    (validate.rules).message.required = true,
    (validate.rules).string.min_len = 1
  ];
  google.protobuf.Value data = 2 [(validate.rules).message.required = true];
}

message UntilRequest {
  string topic = 1;
}
